--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BrewPack</string>
+    <string name="title_activity_list">ListActivity</string>
 </resources>
